# wasm-websocket-integration-example

./: Cargo.toml  README.md  index.html  package-lock.json  package.json
docs/: CNAME  index-6e33cd6dad20a5b3.js  index-86fa668cbb856ed1.js  index-a705686b5d2e21ba.js  index.html  patternfly-addons-436f575a53adcbfc.css  patternfly-c1b6205a8e582c3.css
src/: chart.rs  index.rs  main.rs  moving_avg.rs
